@@ -29,13 +29,13 @@
 
 #ifdef __APPLE__
 #  define __DARWIN_C_SOURCE
+#elif defined(__FreeBSD__) || defined(__NetBSD__) || defined(__SYMBIAN32__) || defined(__QNX__)
+#  define _XOPEN_SOURCE 700
+#  define __BSD_VISIBLE 1
+#  define HAVE_NETINET_IN_H
 #else
 #  define _DEFAULT_SOURCE 1
 #  define _POSIX_C_SOURCE 200809L
-#endif
-
-#if defined(__FreeBSD__) || defined(__NetBSD__) || defined(__SYMBIAN32__) || defined(__QNX__)
-#  define HAVE_NETINET_IN_H
 #endif
 
 #endif
