@@ -39,6 +39,7 @@ Clients:
 
 Build:
 - Fixes for building on NetBSD. Closes #258.
+- Fixes for building on FreeBSD.
 
 
 1.5 - 20180502
